# texla-backend

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs  main.tex  out.json  simple_latex
ast/: Cargo.toml
ast/src/: errors.rs  latex_constants.rs  lib.rs  meta_data.rs  node.rs  operation.rs  options.rs  parser.rs  texla_ast.rs  texla_constants.rs  uuid_provider.rs
ast/src/operation/: add_node.rs  delete_metadata.rs  delete_node.rs  edit_metadata.rs  edit_node.rs  merge_nodes.rs  move_node.rs
frontend/: index.html
latex_test_files/: input.tex  large_latex.tex  latex_single_string.tex  latex_single_string.txt  latex_single_string_huge.txt  latex_with_inputs.tex  latex_with_inputs_huge.tex  lots_of_features.tex  only_subsection.tex  simple_latex.json  simple_latex.tex  simple_latex_unformatted.tex
latex_test_files/pflichtenheft-main/: .gitignore  .gitlab-ci.yml  README.md  main.tex  pflichtenheft.sty  pflichtenheft.tex  preamble.tex
latex_test_files/pflichtenheft-main/sections/: 01_motivation.tex  05_produktfunktionen.tex  07_systemmodell.tex  08_produktleistungen.tex  09_gui-entwuerfe.tex  11_testfallszenarien.tex  12_entwicklungsumgebung.tex  13_glossar.tex
latex_test_files/sections/: section1.tex  section2.tex
latex_test_files/sections/section2/: subsection1.tex
src/: ast.rs  infrastructure.rs  main.rs  texla.rs  webserver.rs
src/ast/: errors.rs  latex_constants.rs  meta_data.rs  mod.rs  node.rs  operation.rs  options.rs  parser.rs  texla_ast.rs  uuid_provider.rs
src/ast/operation/: add_node.rs  delete_metadata.rs  delete_node.rs  edit_metadata.rs  edit_node.rs  merge_nodes.rs  move_node.rs
src/infrastructure/: dir_watcher.rs  errors.rs  export_manager.rs  file_path.rs  pull_timer.rs  storage_manager.rs  vcs_manager.rs  work_session.rs
src/infrastucture/: storage_manager.rs
src/texla/: core.rs  errors.rs  socket.rs  start.rs  state.rs  webserver.rs
src/webserver/: mod.rs  start.rs  webserver.rs
test_resources/latex/: align.tex  large.tex  latex_single_string.txt  latex_single_string_huge.txt  lots_of_features.tex  only_subsection.tex  sectioning.tex  simple.tex  simple_for_operation_testing.tex  simple_unformatted.tex  with_inputs.tex  with_inputs_huge.aux  with_inputs_huge.fdb_latexmk  with_inputs_huge.fls  with_inputs_huge.tex
test_resources/latex/latex_with_metadata/: simple_with_metadata.tex
test_resources/latex/pflichtenheft/: main.tex  preamble.tex  title-page.tex
test_resources/latex/pflichtenheft/sections/: 01_motivation.tex  02_zielbestimmungen.tex  03_produkteinsatz.tex  04_produktumgebung.tex  05_produktfunktionen.tex  06_produktdaten.tex  07_systemmodell.tex  08_produktleistungen.tex  09_gui-entwuerfe.tex  10_qualitaetszielbestimmungen.tex  11_testfallszenarien.tex  12_entwicklungsumgebung.tex  13_glossar.tex
test_resources/latex/sections/: section2.tex
test_resources/latex/sections/section2/: no_segments.tex
test_resources/latex/sections_huge/: section1.tex  section2.tex
test_resources/latex/sections_huge/section2/: subsection1.tex
