[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.69"
axum = { version = "0.6.19", features = ["tower-log", "tokio", "matched-path", "headers", "http1"] }
chrono = "0.4.26"
chumsky = "0.9.2"
clap = { version = "4.3.11", features = ["derive"] }
notify = "6.0.1"
serde = { version = "1.0.166", features = ["rc"] }
serde_json = "1.0.99"
#serde_traitobject = "0.2.8"
socketioxide = "0.3.0"
tokio = { version = "1.29.1", features = ["full"] }
tokio-util = { version = "0.7.8", features = ["io"] }
tower = { version = "0.4.13", features = ["util"] }
tower-http = { version = "0.4.1", features = ["fs", "trace", "cors"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
zip = "0.6"
walkdir = "2"
