[package]
name = "texla"
version = "0.1.0"
edition = "2021"
description = "TeXLa - a graphical LaTeX editor"
authors = ["Paul Liebsch", "Piotr Malkowski", "Leonhard Mannke", "Linus Schöb", "Max Vogel"]

[package.metadata.bundle]
name = "TeXLa"
identifier = "edu.kit.pse.texla"
resources = ["frontend"]
icon = ["frontend/favicon.png"]

[workspace]
members = ["ast"]

[dependencies]
ast = { path = "ast" }
async-trait = "0.1.69"
axum = { version = "0.6.19", features = ["tower-log", "tokio", "matched-path", "headers", "http1"] }
chrono = "0.4.26"
chumsky = "0.9.2"
clap = { version = "4.3.11", features = ["derive"] }
debounced = "0.1.0"
fs_extra = "1.3.0"
futures = "0.3.28"
notify = "6.0.1"
open = "5.0.0"
serde = { version = "1.0.166", features = ["rc"] }
serde_json = "1.0.99"
socketioxide = { git = "https://github.com/lscobe16/socketioxide", version = "0.3.0", rev = "45b5467dd59c5c0a1eaec2958e143bb3074de203" }
tokio = { version = "1.29.1", features = ["full"] }
tokio-stream = "0.1.14"
tokio-util = { version = "0.7.8", features = ["io"] }
tower = { version = "0.4.13", features = ["util"] }
tower-http = { version = "0.4.1", features = ["fs", "trace", "cors"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
walkdir = "2"
zip = "0.6"
